--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.5.3 - Jun 5 2017
+- Fix "whatprovides" cache file usage.
+
 0.5.2 - Jun 4 2017
 - Add missing files to README
 - Fix off-by-one (one too many) # of packages reported by extractMtree.py
