--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+0.8.3 - ??? ?? ????
+
+- Add "findgcda" helper command (as of yet undocumented)
+
+- Add -fprofile-update=prefer-atomic  to the profile generation
+CFLAGS/CXXFLAGS ( for extas/makepkg.conf ) to better protect against possible
+corruption of gcda files during multithreaded or similar conditions
+
+
 0.8.2 - Aug 31 2017
 
 - Fixup abs2 to work in some cases it was not before (and thus the
