--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@
 
 - Fix some permissions issues with abs2 command (and thus archsrc-*pkg and aur-*pkg commands)
 
+- Export the profile name SAFE_LTO as advertised
+
 
 0.8.3 - Nov 17 2017
 
